--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <!-- Section One -->
         <div class="section-one d-none d-sm-block">
             <div class="container">
-                <video autoplay muted id="background-video">
+                <video autoplay muted id="background-video" style="margin-top: -25px">
                     <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
@@ -186,31 +186,32 @@
                 <div class="section-one-container">
                     <div class="section-one-slider">
                         <div class="slide" data-start="0" data-end="3">
-                            <h1 id="slide-1">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-1">Click.<br>Connect.<br>Close.<br></h1>
                         </div>
                         <div class="slide" data-start="3" data-end="5">
-                            <h1 id="slide-2">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-2">Build your Home<br> from scratch</h1>
                         </div>
                         <div class="slide" data-start="5" data-end="7">
-                            <h1 id="slide-3">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-3">Convert your<br> Space to Home</h1>
                         </div>
                         <div class="slide" data-start="7" data-end="9">
-                            <h1 id="slide-4">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-4">Fund Your<br> Dream Home</h1>
                         </div>
                         <div class="slide" data-start="9" data-end="11">
-                            <h1 id="slide-5">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-5">Legal Aid</h1>
                         </div>
                         <div class="slide" data-start="11" data-end="13">
-                            <h1 id="slide-6">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-6">Solar Rooftop<br> Installation</h1>
                         </div>
                         <div class="slide" data-start="13" data-end="15">
-                            <h1 id="slide-7">Click.<br> Connect.<br> Close.</h1>
+                            <h1 id="slide-7">Packers & Movers<br> Services</h1>
                         </div>
                     </div>
                 </div>
                 <div class="section-one-bottom-outer">
                     <div class="section-one-bottom d-flex align-items-center justify-content-between">
-                        <p>Revolutionize your real estate experience with seamless, tech-driven<br> solutions by
+                        <p id="section-bottom-text">Revolutionize your real estate experience with seamless,
+                            tech-driven<br> solutions by
                             Realezi.
                             From first-time buyers to professional sellers,<br> we make your journey from click to close
                             effortless. </p>
@@ -834,7 +835,11 @@
                                             <h5>Book a Site Visit </h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
-                                                <img src="./images/tablet-img-1.png" alt="" class="tablet-image">
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
@@ -855,7 +860,11 @@
                                             <h5>Dream List</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
-                                                <img src="./images/tablet-img-2.png" alt="" class="tablet-image">
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
@@ -889,7 +898,11 @@
                                             <h5>Your Realezi Passbook</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
-                                                <img src="./images/tablet-img-3.png" alt="" class="tablet-image">
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
@@ -910,7 +923,11 @@
                                             <h5>One for All</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
-                                                <img src="./images/tablet-img-4.png" alt="" class="tablet-image">
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
@@ -935,16 +952,20 @@
                                     </div>
                                     <div class="d-flex">
                                         <div class="tablet-content-container">
-                                            <h5>Dedicated RM</h5>
+                                            <h5>Dedicated Relationship Manager</h5>
                                             <p>Get personalised guidance and tailored services from our dedicated
                                                 Relationship Manager- ensuring you never feel lost!</p>
                                             <button>View More</button>
                                         </div>
                                         <div class="animated-container-outer">
-                                            <h5>Dedicated RM</h5>
+                                            <h5>Dedicated Relationship Manager</h5>
                                             <div class="animated-container">
                                                 <div class="color-overlay"></div>
-                                                <img src="./images/tablet-img-5.png" alt="" class="tablet-image">
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
                                             </div>
                                             <div
                                                 class="animated-container-content align-items-start justify-content-between">
@@ -959,6 +980,37 @@
                                                 </div>
                                                 <button>View More</button>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex">
+                                        <div class="animated-container-outer">
+                                            <h5>Client Privacy</h5>
+                                            <div class="animated-container">
+                                                <div class="color-overlay"></div>
+                                                <video class="tablet-image" width="100%" style="object-fit: cover;"
+                                                    autoplay muted loop>
+                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
+                                            </div>
+                                            <div
+                                                class="animated-container-content align-items-start justify-content-between">
+                                                <div class="short-text-outer">
+                                                    <p class="short-text">Say goodbye to scam calls! Your information
+                                                        stays with us–guaranteed security and peace of mind with zero
+                                                        spam calls. </p>
+                                                    <a href="javascript:void(0);" class="read-more-btn">Read
+                                                        more</a>
+                                                </div>
+                                                <button>View More</button>
+                                            </div>
+                                        </div>
+                                        <div class="tablet-content-container">
+                                            <h5>Client Privacy</h5>
+                                            <p>Say goodbye to scam calls! Your information stays with us–guaranteed
+                                                security and peace of mind with zero spam calls.</p>
+
+                                            <button>View More</button>
                                         </div>
                                     </div>
                                 </div>
@@ -1488,7 +1540,7 @@
             <div class="upper-footer">
                 <div class="columns d-flex align-items-start justify-content-between my-3">
                     <div>
-                        <img src="./images/logo.png" width="150px" class="mb-3" />
+                        <img src="./images/logo2.png" width="150px" class="mb-3" />
                         <h3>
                             Connecting You to Your<br />
                             Dream Property.
@@ -1707,7 +1759,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="./footer.js"></script>
     <script defer src="./navbar.js"></script>
-    <script defer src="./background-video.js"></script>
+    <script src="./background-video.js"></script>
+    <script defer src="./section-one-slide-change.js"></script>
     <script defer src="./section-two.js"></script>
     <script defer src="./video-slider.js"></script>
     <script defer src="./tablet-animation.js"></script>
@@ -1725,6 +1778,7 @@
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
     <script defer src="./filter-section.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
